--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 [packages]
 
 flask = "*"
-flask_restful = "*"Pipfile.lock
+flask_restful = "*"
 gunicorn = "*"
 sqlite3 = "*"
 pandas = "*"
